--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous" />
     <!-- my css -->
-    <link rel="stylesheet" href="/assets/styles/style.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
   </head>
   <body>
     <h1 class="display-1">Tests text to see the font</h1>
