add some placeholder text to show the layout of the website

--- a/game-library.html
+++ b/game-library.html
@@ -47,8 +47,8 @@
     <!-- Header with carousel -->
     <div class="header container">
       <div class="row">
+        <div class="col-12 col-xl-6">games lib intro text</div>
         <div class="col-12 col-xl-6">Carousel</div>
-        <div class="col-12 col-xl-6">Boardwalk games intro text</div>
       </div>
     </div>
 
@@ -57,11 +57,18 @@
       <!-- services section -->
       <section class="container">
         <div class="row">
-          <div class="col-12">Services section heading</div>
-          <div class="col-12 col-md-6 col-xl-3">Services placeholder card</div>
-          <div class="col-12 col-md-6 col-xl-3">Services placeholder card</div>
-          <div class="col-12 col-md-6 col-xl-3">Services placeholder card</div>
-          <div class="col-12 col-md-6 col-xl-3">Services placeholder card</div>
+          <div class="col-12">New games heading</div>
+          <div class="col-12 col-md-6 col-xl-4">new Game card</div>
+          <div class="col-12 col-md-6 col-xl-4">new Game card</div>
+          <div class="col-12 col-md-6 col-xl-4">new Game card</div>
+          <div class="col-12 col-md-6 col-xl-4">new Game card</div>
+        </div>
+        <div class="row">
+          <div class="col-12">fav games heading</div>
+          <div class="col-12 col-md-6 col-xl-4">fav Game card</div>
+          <div class="col-12 col-md-6 col-xl-4">fav Game card</div>
+          <div class="col-12 col-md-6 col-xl-4">fav Game card</div>
+          <div class="col-12 col-md-6 col-xl-4">fav Game card</div>
         </div>
       </section>
     </main>
