--- a/game-library.html
+++ b/game-library.html
@@ -42,9 +42,15 @@
   <!-- classes on body set to wokr with mt-auto to put footer at the bottom of the page -->
   <body class="d-flex flex-column min-vh-100">
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Boardwalk Games</a>
+        <a class="navbar-brand" href="index.html"
+          ><img
+            class="logo"
+            src="assets/images/logo-sm-white.png"
+            alt="Boardwalk Games logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -63,7 +69,7 @@
             <li class="nav-item">
               <a
                 class="nav-link active"
-                aria-current="active page"
+                aria-current="page"
                 href="game-library.html"
                 >Games</a
               >
