--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
   <body class="d-flex flex-column min-vh-100">
     <!-- nav bar -->
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Boardwalk Games</a>
+        <a class="navbar-brand" href="index.html"
+          ><img
+            class="logo"
+            src="assets/images/logo-sm-white.png"
+            alt="Boardwalk Games logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -59,9 +64,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="active page" href="#"
-                >Home</a
-              >
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="game-library.html">Games</a>
