--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a
+                href="booking.html"
+                class="btn btn-primary ms-lg-3"
+                aria-current="page"
+                >Book now</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -95,6 +103,9 @@
             ready for your next challenge, or a student gamer looking for a fun,
             affordable hangout, we've got you covered.
           </p>
+          <a href="booking.html" class="btn btn-primary mb4" aria-current="page"
+            >Book now</a
+          >
         </div>
         <div class="col-12 col-xl-6">
           <div
