--- a/booking.html
+++ b/booking.html
@@ -78,7 +78,7 @@
             <li class="nav-item">
               <a
                 href="booking.html"
-                class="btn btn-primary ms-lg-3"
+                class="btn ms-lg-3 custom-button-filled"
                 aria-current="page"
                 >Book now</a
               >
@@ -164,7 +164,9 @@
                 </div>
               </div>
 
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn custom-button-outline">
+                Submit
+              </button>
             </form>
           </div>
         </div>
