--- a/game-library.html
+++ b/game-library.html
@@ -83,7 +83,7 @@
             <li class="nav-item">
               <a
                 href="booking.html"
-                class="btn btn-primary ms-lg-3"
+                class="btn ms-lg-3 custom-button-filled"
                 aria-current="page"
                 >Book now</a
               >
