--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li class="nav-item">
               <a
                 href="booking.html"
-                class="btn btn-primary ms-lg-3"
+                class="btn ms-lg-3 custom-button-filled"
                 aria-current="page"
                 >Book now</a
               >
@@ -103,7 +103,10 @@
             ready for your next challenge, or a student gamer looking for a fun,
             affordable hangout, we've got you covered.
           </p>
-          <a href="booking.html" class="btn btn-primary mb4" aria-current="page"
+          <a
+            href="booking.html"
+            class="btn custom-button-outline mb4"
+            aria-current="page"
             >Book now</a
           >
         </div>
