add the events section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#events">Events</a>
+            </li>
+            <li class="nav-item">
               <a
                 href="booking.html"
                 class="btn ms-lg-3 custom-button-filled"
@@ -109,6 +112,8 @@
             aria-current="page"
             >Book now</a
           >
+          <br />
+          <br />
         </div>
         <div class="col-12 col-xl-6">
           <div
@@ -264,6 +269,59 @@
         </div>
       </section>
     </main>
+
+    <section id="events" class="container section">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h2 class="display-6">Join our events</h2>
+        </div>
+        <div class="col-12 col-xl-6">
+          <p>
+            Whether you're delving into dungeons, reliving classic games, or
+            competing in high-stakes tournaments, there's something for every
+            gamer. Reservations are recommended to ensure your spot at the
+            table. Student discounts are available, so bring your student ID and
+            enjoy more gaming for less.
+          </p>
+          <p>
+            Outside scheduled events, our shop remains open for regular play.
+            Join us anytime to discover new games and meet fellow enthusiasts.
+          </p>
+        </div>
+        <div class="col-12 col-xl-6">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Event</th>
+                <th scope="col">Date</th>
+                <th scope="col">Time</th>
+                <th scope="col">Price</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Dungeons & Dragons</th>
+                <td>Tuesday</td>
+                <td>8pm - 11pm</td>
+                <td>€25 for 6 sessions</td>
+              </tr>
+              <tr>
+                <th>Retro Game Night</th>
+                <td>Thursdays</td>
+                <td>8pm - 11pm</td>
+                <td>€5 per person*</td>
+              </tr>
+              <tr>
+                <th>Tournaments</th>
+                <td>Last Sunday of the month</td>
+                <td>12pm - 7pm</td>
+                <td>€10 per person</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
 
     <!-- footer -->
     <!-- mt-auto puts the footer at the bottom -->
