--- a/game-library.html
+++ b/game-library.html
@@ -81,6 +81,9 @@
               <a class="nav-link" href="index.html#contact">Contact</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="index.html#events">Events</a>
+            </li>
+            <li class="nav-item">
               <a
                 href="booking.html"
                 class="btn ms-lg-3 custom-button-filled"
