--- a/success.html
+++ b/success.html
@@ -73,6 +73,9 @@
               <a class="nav-link" href="index.html#contact">Contact</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="index.html#events">Events</a>
+            </li>
+            <li class="nav-item">
               <a class="btn ms-3 custom-button-filled" href="booking.html"
                 >Book now</a
               >
