--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header id="header" class="container section">
       <div class="row">
         <div class="col-12 col-xl-6 text-center text-xl-start">
-          <h1 class="display-3">Boardwalk Games</h1>
+          <h1 class="display-3 content">Boardwalk Games</h1>
           <p class="lead display-6 sub-heading-color">
             Your next adventure is waiting!
           </p>
@@ -319,6 +319,23 @@
               </tr>
             </tbody>
           </table>
+          <div class="text-center">
+            <a
+              href="booking.html"
+              class="btn custom-button-filled"
+              aria-current="page"
+              ><strong>*Get 20% off with valid student ID</strong></a
+            >
+          </div>
+          <br /><br />
+        </div>
+        <div class="text-center">
+          <a
+            href="booking.html"
+            class="btn custom-button-outline mb4"
+            aria-current="page"
+            >Book now</a
+          >
         </div>
       </div>
     </section>
