fix button positioning

--- a/game-library.html
+++ b/game-library.html
@@ -386,10 +386,11 @@
                     required />
                 </div>
               </div>
-
-              <button type="submit" class="btn custom-button-outline">
-                Submit
-              </button>
+              <div class="text-end">
+                <button type="submit" class="btn custom-button-outline">
+                  Submit
+                </button>
+              </div>
             </form>
           </div>
         </div>
