--- a/booking.html
+++ b/booking.html
@@ -43,7 +43,10 @@
   <body class="d-flex flex-column min-vh-100">
     <!-- nav bar -->
 
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <nav
+      id="navbar"
+      class="navbar navbar-expand-lg fixed-top"
+      data-bs-theme="dark">
       <div class="container">
         <a class="navbar-brand" href="index.html"
           ><img
