fix bug with duplicate id and add some additional prefixers

--- a/game-library.html
+++ b/game-library.html
@@ -249,7 +249,7 @@
       <!-- fav games -->
       <section id="fav-games" class="container section">
         <div class="row">
-          <div id="fav-games" class="col-12 text-center">
+          <div class="col-12 text-center">
             <h2>favourites</h2>
           </div>
 
